<resources>

    <string name="album_name_all">todos</string>
    <string name="button_preview">pré-visualização</string>
    <string name="button_back">voltar</string>
    <string name="photo_grid_capture">capturar imagem</string>
    <string name="empty_text">imagem ou vídeo inexistente</string>
    <string name="button_ok">estou ciente</string>
    <string name="error_over_count_default">limite máximo de opções atingido</string>
    <string name="error_over_count">limite máximo de seleção %1$d arquivos</string>
    <string name="error_file_type">tipo de arquivo não suportado</string>
    <string name="error_type_conflict">não é possível selecionar imagens e vídeos ao mesmo tempo</string>
    <string name="error_no_video_activity">o aplicativo não suporta pré-visualização de vídeos</string>
    <string name="error_over_original_size">"não é possível carregar imagens acima de %1$d M，cancele a opção tamanho original"</string>
    <string name="error_over_original_count">"há %1$d imagens acima de %2$d M\n não é possível carregá-las, cancele a opção tamanho original"</string>
    <string name="button_original">tamanho original</string>
    <string name="button_sure_default">confirmar</string>
    <string name="button_sure">confirmar(%1$d)</string>
    <string name="share">compartilhar arquivo de voz</string>
    <string name="emoji_category_recent">recentes</string>
    <string name="emoji_backspace">Backspace</string>
    <string name="emoji_ios_category_activities">Activities</string>
    <string name="emoji_ios_category_flags">Flags</string>
    <string name="emoji_ios_category_foodanddrink">Food</string>
    <string name="emoji_ios_category_animalsandnature">Nature</string>
    <string name="emoji_ios_category_objects">Objects</string>
    <string name="emoji_ios_category_smileysandpeople">Faces</string>
    <string name="emoji_ios_category_symbols">Symbols</string>
    <string name="emoji_ios_category_travelandplaces">Places</string>
    <string name="common_quit_app_tips">"clique novamente para finalizar processo"</string>
    <string name="tips_not_wifi">você está conectado a uma rede móvel, ao continuar transmissão irá consumir o seu pacote de dados</string>
    <string name="tips_not_wifi_confirm">continuar transmissão</string>
    <string name="no_net">rede não encontrada</string>
    <string name="tips_not_wifi_cancel">parar transmissão</string>
    <string name="no_url">sem endereço de transmissão</string>
    <string name="jump_ad">pular anúncio</string>
    <string name="ucrop_label_original">original</string>
    <string name="ucrop_label_edit_photo">editar</string>
    <string name="ucrop_menu_crop">recortar</string>
    <string name="ucrop_error_input_data_is_absent" translatable="false">é necessário indicar a URI de entrada e saída</string>
<string name="ucrop_mutate_exception_hint" translatable="false">Portanto, substitua o recurso de cores (ucrop_color_toolbar_widget) em seu aplicativo para fazê-lo funcionar em dispositivos pré-l</string>
<string name="ucrop_rotate">girar</string>
<string name="ucrop_scale">ajustar tamanho</string>
<string name="ucrop_crop">recortar</string>
    <!-- lista branca -->
<string name="ok">confirmar</string>
<string name="cancel">cancelar</string>
<string name="file_picker_go_back">voltar</string>
<string name="file_picker_selected_count">selecionados ·%1$d</string>
<string name="file_picker_request_permission_failed">sem permissão de armazenamento</string>
<string name="file_picker_tv_select_all">selecionar tudo</string>
<string name="file_picker_tv_deselect_all">cancelar seleção</string>
<string name="file_picker_tv_select_done">confirmar</string>
<string name="file_picker_tv_sd_card">cartão de memória SD</string>
<string name="too_many_files_tips">ultrapassado o limite \n de arquivos carregando &#8230;</string>
<string name="max_select_count_tips">limite máximo para seleção %d</string>
<string name="empty_list_tips_file_picker">vazio</string>
<string name="picture">imagem</string>
<string name="under_load_sign">carregando</string>
<string name="sweep_the_qr_code">escanear o código QR</string>
<string name="loading">carregando</string>
<string name="shoot">capturar</string>
<string name="business_card">contato</string>
<string name="photo_album">álbum</string>
<string name="turn_on_the_flash_lights">ativar flash</string>
<string name="my_qr">meu código QR</string>
<string name="location">localização</string>
<string name="get_code">obter código QR</string>
<string name="file">arquivo</string>
<string name="all_photos">todas as imagens</string>
<string name="fail_to_load">falha no carregamento</string>
<string name="let_me_retry">clique para tentar novamente</string>
<string name="long_press_the_video">clique para tirar foto, segure para gravar vídeo</string>
<string name="no_data">sem dados</string>
<string name="test_video">testar vídeo</string>
<string name="no_permissions_were_obtained">permissões não obtidas</string>
<string name="maximum_file_limit_50m">tamanho máximo de arquivos 150M</string>
<string name="choose_max_at_the_same_time">você pode selecionar no máximo %s vídeos</string>
<string name="open_links">abrir link</string>
<string name="copylink">copiar link</string>
<string name="copy_success">copiado com sucesso</string>
<string name="flash_off">desativar flash</string>
<string name="flash_open">ativar flash</string>
<string name="qr_code_not_found">código QR não encontrado</string>
<string name="image_retrieval_failed">falha ao obter imagem</string>
<string name="tautology">tentar novamente</string>
<string name="regain">obter novamente</string>
<string name="start_up_is_not_supported">inicialização automática não suportada</string>
<string name="it_can_improve_the_accuracy_of_message_arrival">ao permitir inicialização automática haverá uma melhoria na precisão da chegada das mensagens</string>
<string name="add_since_launching_the_whitelist">adicionar à lista de permissões de inicialização automática</string>
<string name="unmonitored_applications"><![CDATA[adicionar à: bateria->aplicativos não monitorados]]></string>
<string name="string_icon_all">tudo</string>
<string name="string_icon_recent">recentes</string>
<string name="small">pequeno</string>
<string name="big">grande</string>
<string name="standard">padrão</string>
<string name="the_drop_down_can_refresh">puxe para baixo para atualizar</string>
<string name="onr_refresh">atualizando</string>
<string name="loading2">carregando</string>
<string name="release_instant_refresh">solte para atualizar</string>
<string name="refresh_to_complete">atualização concluída</string>
<string name="refresh_the_failure">falha na atualização</string>
<string name="last_update">\'última atualização\' M-d HH:mm</string>
<string name="release_into_the_second_floor">solte para entrar na segunda parte</string>
<string name="append">adicionar</string>
    <!--desbloquear v1.6.0 adicionado-->
    <string name="plugin_uexGestureUnlock_codeLengthErrorPrompt">desenhe no mínimo %d pontos</string>
    <string name="plugin_uexGestureUnlock_checkErrorPrompt">não condiz com o desenho anterior, favor desenhar novamente</string>
    <string name="plugin_uexGestureUnlock_verificationErrorPrompt">senha incorreta, você possui mais %d tentativas</string>
    <string name="plugin_uexGestureUnlock_verificationErrorMaxPrompt">você errou muitas vezes, tente novamente em %@ minutos</string>
    <string name="plugin_uexGestureUnlock_codeCheckPrompt">desenhe novamente a senha padrão</string>
    <string name="plugin_uexGestureUnlock_creationBeginPrompt">desenhar senha padrão</string>
    <string name="plugin_uexGestureUnlock_verificationBeginPrompt">verificação de senha de gesto</string>
    <string name="plugin_uexGestureUnlock_verificationSucceedPrompt">verificação concluída</string>
    <string name="plugin_uexGestureUnlock_creationSucceedPrompt">senha de gesto definida com sucesso</string>
    <string name="plugin_uexGestureUnlock_restartCreationButtonTitle">redefinir</string>
    <string name="plugin_uexGestureUnlock_errorCodeTooManyTry">houve muitas tentativas de senha</string>
    <string name="plugin_uexGestureUnlock_errorCodeUnknown">erro desconhecido</string>
    <string name="gesture_input_old_pwd">verificação de senha de gesto</string>
    <string name="gesture_set_pwd">definir senha de gesto</string>
    <string name="gesture_set_new_pwd">definir nova senha de gesto</string>
    <string name="gesture_change_account">acessar outra conta</string>
    <string name="gesture_forget_pwd">esqueci a senha de gesto</string>
    <string name="fingerprint_unsupport">o dispositivo não suporta desbloqueio através de impressão digital</string>
    <string name="fingerprint_system_no_data">registre a impressão digital no sistema e tente novamente</string>
    <string name="fingerprint_title">verificação através de impressão digital</string>
    <string name="fingerprint_pressdown">pressione o leitor de impressão digital</string>
    <string name="fingerprint_verify_success">verificação através de impressão digital concluída</string>
    <string name="fingerprint_verify_fail">falha na verificação de impressão digital</string>
    <string name="fingerprint_verify_data_changed_1">houve alteração na impressão digital, registre novamente no sistema</string>
    <string name="fingerprint_verify_data_changed_2">houve alteração na impressão digital, desbloqueie através da senha de gesto</string>
    <string name="change_applock_pincode">alterar senha numérica</string>
    <string name="forget_applock_pincode">esqueci a senha numérica</string>
    <string name="applock_pincode_title_verify">verificação da senha numérica</string>
    <string name="applock_pincode_title_input">digite a senha numérica</string>
    <string name="applock_pincode_title_setting">definir senha numérica</string>
    <string name="applock_pincode_input_again">digite novamente</string>
    <string name="applock_pincode_input_error_again">o valor digitado é divergente, digite novamente</string>
    <string name="applock_pincode_other_type">outro tipo de senha</string>

    <!-- v2.0.0  -->
    <string name="verification_error_disable_account_warn">senha incorreta, caso haja outro erro a conta será encerrada</string>

</resources>
