<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <SurfaceView
        android:id="@+id/preview_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <cn.bingoogolapple.qrcode.zbar.ZBarView
        android:id="@+id/zbarview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:qrcv_animTime="1000"
        app:qrcv_borderColor="@android:color/white"
        app:qrcv_borderSize="1dp"
        app:qrcv_cornerLength="20dp"
        android:layout_gravity="center"
        app:qrcv_cornerSize="3dp"
        app:qrcv_isShowDefaultScanLineDrawable="true"
        app:qrcv_maskColor="#33FFFFFF"
        app:qrcv_rectWidth="200dp"
        app:qrcv_topOffset="190dp" />

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <ImageView
            android:id="@+id/image_view_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:scaleType="centerInside"
            android:src="@drawable/qr_icon_close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/sweep_the_qr_code"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/image_view_photo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:gravity="center"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/photo_album"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </FrameLayout>

    <TextView
        android:id="@+id/text_view_flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="102dp"
        android:textColor="@color/white"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="12sp"
        android:gravity="center"
        android:text="@string/turn_on_the_flash_lights"/>

    <TextView
        android:id="@+id/text_view_qr"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="40dp"
        android:textColor="@color/c178aff"
        android:textSize="16sp"
        android:background="@drawable/myqr_buttom"
        android:gravity="center"
        android:text="@string/my_qr"/>

</FrameLayout>