<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pinLockLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="vertical"
        android:background="@color/white">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <ImageButton
                android:id="@+id/btn_go_back"
                style="@android:style/Widget.Holo.Button.Borderless"
                android:layout_width="54dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:gravity="start"
                android:src="@drawable/common_icon_black_back"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/gesture_set_pwd"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_toolbar_right_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/gesture_change_account"
                android:textColor="@color/c178aff"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/d4d6d9" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <framework.telegram.ui.image.AppImageView xmlns:fresco="http://schemas.android.com/apk/res-auto"
                android:id="@+id/unlock_user_logo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                fresco:actualImageScaleType="focusCrop"
                fresco:roundAsCircle="true" />

            <TextView
                android:id="@+id/label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.andrognito.pinlockview.IndicatorDots
                android:id="@+id/indicator_dots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp" />

            <com.andrognito.pinlockview.PinLockView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/pin_lock_view"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                app:keypadDeleteButtonDrawable="@drawable/icon_delete_pin_code" />

        </LinearLayout>
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/other_lock_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/applock_pincode_other_type"
            android:textColor="@color/c178aff"
            android:textSize="12sp"
            android:padding="10dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/reset_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plugin_uexGestureUnlock_restartCreationButtonTitle"
            android:textColor="@color/c178aff"
            android:textSize="12sp"
            android:padding="10dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/forget_pin_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_applock_pincode"
            android:textColor="@color/c178aff"
            android:textSize="12sp"
            android:padding="10dp"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>