<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/image_view_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:scaleType="center"
            android:src="@drawable/common_icon_black_back" />

        <TextView
            android:id="@+id/text_view_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableRight="@drawable/icon_album_point"
            android:drawablePadding="2dp"
            android:text="@string/all_photos"
            android:textColor="@color/black"
            android:textSize="17sp" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?attr/bottomToolbar.bg"
        android:elevation="4dp"
        tools:targetApi="lollipop">

        <TextView
            android:id="@+id/button_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:foreground="?selectableItemBackground"
            android:padding="16dp"
            android:text="@string/button_preview"
            android:textColor="?attr/bottomToolbar.preview.textColor"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/originalLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foreground="?selectableItemBackground"
            android:orientation="horizontal"
            android:padding="16dp"
            android:visibility="visible"
            tools:showIn="@layout/activity_imagepicker">


            <framework.telegram.ui.imagepicker.internal.ui.widget.CheckRadioView
                android:id="@+id/original"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_preview_radio_off" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:enabled="true"
                android:paddingStart="4dp"
                android:paddingLeft="4dp"
                android:text="@string/button_original"
                android:textColor="?attr/bottomToolbar.preview.textColor"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end|center_vertical"
            android:gravity="center_vertical"
            android:background="@drawable/bus_corners_d4d6d9_trans_6_0"
            android:paddingStart="12dp"
            android:paddingEnd="12sp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginEnd="12dp">

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tv_max_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#EAEAEA"
                android:textSize="12sp"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/album_send"
                android:layout_marginStart="12dp"/>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_toolbar"
        android:layout_below="@id/toolbar"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_toolbar"
        android:layout_below="@id/toolbar"
        android:visibility="gone">

        <TextView
            android:id="@+id/empty_view_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="?attr/album.emptyView"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="@string/empty_text"
            android:textColor="?attr/album.emptyView.textColor"
            android:textSize="16sp" />

    </FrameLayout>
</RelativeLayout>